[package]
name = "rkyv_indexmap"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.6.2", optional = true }
rkyv = { git = "https://github.com/djkoloski/rkyv", branch = "0.7.0" }

[features]
default = []
